@@ -1,5 +1,6 @@
 0.6.0
-8 str.fs: new word: str+columns (2007-07-17)
+* htm.fs: new module (HTML reader and writer) (2007-09-16)
+* str.fs: new word: str+columns (2007-07-17)
 * arg.fs: new module (Arguments parser) (2007-07-09)
 * config.fs: 0e0->0E+0, 1e0->1E+0, 2e0->2E+0 (2007-06-25)
 0.5.0
